--- a/meetmeserver/src/main/webapp/UI/Register.css
+++ b/meetmeserver/src/main/webapp/UI/Register.css
@@ -1,19 +1,23 @@
 @charset "utf-8";
-.style_featured{
-    padding: 20px 0;
-    text-align: center;
+body{
+    background: url('http://i.imgur.com/evjlHGd.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    padding-bottom:100px;
 }
-.style_featured > div > div{
-    padding: 10px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    transition: 0.5s;
-}
-.style_featured > div:hover > div{
-    margin-top: +19px;
-    border: 1px solid rgb(153, 200, 250);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 9px 9px 9px;
-    background: rgba(153, 200, 250, 0.1);
-    transition: 0.99s;
-}
+h4{
+	font-family:"HP Simplified";
+	color:#0080FF;
+	font-weight:300;}
+#heading{
+background-color:#FA483C; color:white; text-align:leftt; border-radius:7px; padding:1%; margin-bottom:10px;margin-top:10px;
+font-family:"HP Simplified"; font-size:30px; font-weight:300;
+ margin-right:0.1%;
 
+          }
+label{
+font-family:"HP Simplified";
+color:'3D91AD';
+}
