--- a/meetmeserver/src/main/webapp/UI/Login.css
+++ b/meetmeserver/src/main/webapp/UI/Login.css
@@ -3,5 +3,9 @@
 
 h4{
 	font-family:"HP Simplified";
-	color:#0080FF;
+	color:white;
 	font-weight:300;}
+#heading{
+background-color:#2EFE64; color:white; text-align:leftt; border-radius:10px; padding:1%; margin-bottom:10px;margin-top:10px;
+font-family:"HP Simplified"; font-size:30px; font-weight:300;
+}
