--- a/meetme-app/src/main/res/layout/hello_layout.xml
+++ b/meetme-app/src/main/res/layout/hello_layout.xml
@@ -26,6 +26,7 @@
         <Button android:text="@string/stopp" android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
         <Button android:text="@string/speichern" android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 
+
     </LinearLayout>
     <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout1">
 
@@ -34,6 +35,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Show User"
-            android:id="@+id/button" android:layout_gravity="center_horizontal"/>
+            android:id="@+id/button4" android:layout_gravity="center_horizontal"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textViewUserlist" android:layout_gravity="center_horizontal"/>
+    <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button5" android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
