--- a/meetme-app/src/main/res/layout/activity_main.xml
+++ b/meetme-app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 
 android:orientation="vertical"
 android:layout_width="match_parent"
-android:layout_height="match_parent">
+android:layout_height="match_parent" android:weightSum="1" android:id="@+id/button5">
 
 
 <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent">
@@ -28,5 +28,17 @@ android:layout_height="match_parent">
 <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout1">
 
 </TableLayout>
+    <Button
+            android:layout_width="138dp"
+            android:layout_height="wrap_content"
+            android:text="Show User List"
+            android:id="@+id/button4" android:layout_gravity="center_horizontal" android:layout_weight="0.12"
+            android:singleLine="true"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text=""
+            android:id="@+id/textViewUserList" android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
